# ycurl

./: .flake8  .pre-commit-config.yaml  .pylintrc  LICENSE.txt  README.md  mypy.ini  pyproject.toml  request.yaml
src/ycurl/: __about__.py  __init__.py  cli.py  config.py  constants.py  core.py  dynload.py  exceptions.py  executor.py  http_client.py  logging_config.py  registry.py  request.py  scaffold.py  utils.py
tests/: __init__.py  test_core.py
