[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ycurl"
dynamic = ["version"]
description = 'Shareable HTTP request recipes'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "QAToolist", email = "qatoolist@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "rich>=13.7",
    "deepmerge>=1.1",
]

[project.urls]
Documentation = "https://github.com/QAToolist/ycurl#readme"
Issues = "https://github.com/QAToolist/ycurl/issues"
Source = "https://github.com/QAToolist/ycurl"

[project.scripts]
ycurl = "ycurl.cli:cli"

[tool.hatch.version]
path = "src/ycurl/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ycurl tests}"

[tool.coverage.run]
source_pkgs = ["ycurl", "tests"]
branch = true
parallel = true
omit = [
  "src/ycurl/__about__.py",
]

[tool.coverage.paths]
ycurl = ["src/ycurl", "*/ycurl/src/ycurl"]
tests = ["tests", "*/ycurl/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
